--- a/Avalith-API/card.html
+++ b/Avalith-API/card.html
@@ -44,14 +44,10 @@
       </nav>
       </nav>
     </header>
+    <!-- Card -->
     <main class="container-fluid py-2">
-      <h2 class="text-center my-3">Cartas</h2>
-      <div class="container">
-        <div id="cards" class="row">
-          <div class="col col-sm-6 col-md-4">
-            <div id="cards"></div>
-          </div>
-        </div>
+      <div class="row row-cols-1 row-cols-md-3 g-4" id="characters">
+        <div class="card" ></div>
       </div>
     </main>
     <footer class="bg-light text-center text-white">
@@ -142,6 +138,8 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
-    <script src="/scripts/cards.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+     <script src="./scripts/cards.js"></script>
   </body>
 </html>
