--- a/Avalith-API/form.html
+++ b/Avalith-API/form.html
@@ -170,6 +170,6 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
-    <script src="/scripts/form.js"></script>
+    <script src="./scripts/table.js"></script>
   </body>
 </html>
