--- a/Avalith-API/index.html
+++ b/Avalith-API/index.html
@@ -40,6 +40,7 @@
         </div>
       </nav>
     </header>
+    <!-- Card -->
     <main class="container-fluid py-2">
       <h2 class="text-center my-3">Skill Factory React con Avalith</h2>
       <div class="container-fluid">
@@ -47,7 +48,7 @@
           <a type="button" class="btn btn-info" href="form.html"
             >Formulario de Contacto</a
           >
-          <a type="button" class="btn btn-info" href="table.html">Usuarios</a>
+          <a type="button" class="btn btn-info" href="users.html">Usuario</a>
 
           <a type="button" class="btn btn-info" href="card.html"
             >API Rick & Morty</a
