--- a/Avalith-API/card.html
+++ b/Avalith-API/card.html
@@ -44,7 +44,7 @@
       </nav>
       </nav>
     </header>
-    <!-- Card --> <!-- Card --> 
+    <!-- Card --> 
     <main class="container-fluid py-2">
       <div class="row row-cols-2 row-cols-md-3 g-4" id="characters">
         <div class="card" ></div>
